:icons: font

= Gentics Mesh Changelog

== 0.9.12 (08.06.2017)

icon:check[] GraphQL: Fixed handling of node lists within micronodes.

icon:check[] GraphQL: Fixed Micronode type not found error.

== 0.9.11 (07.06.2017)

icon:plus[] GraphQL: The graphql library was updated. Various graphql related issues have been fixed.

== 0.9.10 (29.05.2017)

icon:plus[] Schemas: The default content and folder schemas have been updated. The `fileName` and `folderName` fields have been renamed to `slug`. The `name` field was removed from the content schema and a `teaser` field has been added.
These changes are optional and thus not automatically applied to existing installations.

icon:plus[] Demo: The `folderName` and `fileName` fields have been renamed to `slug`. This change only affects new demo installations.

icon:check[] UI: Schema & Microschema description is no longer a required field.

icon:check[] GraphQL: The language fallback handling was overhauled. The default language will no longer be automatically be append to the list of fallback languages. This means that loading nodes will only return nodes in those languages which have been specified by the `lang` argument.

icon:check[] GraphQL: The `path` handling for nodes within node lists has been fixed. Previously it was not possible to retrieve the `path` and various other fields for those nodes.

== 0.9.9 (19.05.2017)

icon:plus[] Core: The OrientDB graph database version was updated to version 2.2.20.

icon:plus[] API: The following endpoints were moved:

 * `/api/v1/admin/backup`  ⟶  `/api/v1/admin/graphdb/backup`
 * `/api/v1/admin/export`  ⟶  `/api/v1/admin/graphdb/export`
 * `/api/v1/admin/import`  ⟶  `/api/v1/admin/graphdb/import`
 * `/api/v1/admin/restore` ⟶  `/api/v1/admin/graphdb/restore`

icon:plus[] Core: Added `/api/v1/:projectName/releases/:releaseUuid/migrateMicroschemas` endpoint which can be used to resume previously unfinished micronode migrations.
