@@ -1,18 +1,16 @@
 package com.gentics.mesh.core.graphql;
 
-import static com.gentics.mesh.core.data.relationship.GraphPermission.READ_PERM;
 import static com.gentics.mesh.test.TestDataProvider.PROJECT_NAME;
 import static com.gentics.mesh.test.context.MeshTestHelper.call;
-import static io.netty.handler.codec.http.HttpResponseStatus.BAD_REQUEST;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
 
 import org.json.JSONException;
 import org.junit.Test;
 
 import com.gentics.mesh.core.rest.graphql.GraphQLRequest;
 import com.gentics.mesh.core.rest.graphql.GraphQLResponse;
-import com.gentics.mesh.graphdb.NoTx;
 import com.gentics.mesh.test.TestSize;
 import com.gentics.mesh.test.context.AbstractMeshTest;
 import com.gentics.mesh.test.context.MeshTestSetting;
@@ -39,15 +37,6 @@ public class GraphQLEndpointBasicTest extends AbstractMeshTest {
 	public void testEmptyQuery() throws Throwable {
 		GraphQLResponse response = call(() -> client().graphqlQuery(PROJECT_NAME, ""));
 		assertEquals(1, response.getErrors().stream().filter(error -> error.getType().equals("InvalidSyntax")).count());
-	}
-
-	@Test
-	public void testDataFetchingError() throws Throwable {
-		try (NoTx noTx = db().noTx()) {
-			role().revokePermissions(project(), READ_PERM);
-		}
-		GraphQLResponse response = call(() -> client().graphqlQuery(PROJECT_NAME, "{project{name}}"));
-		System.out.println(response.getData().encodePrettily());
 	}
 
 	@Test
